# CodeWisdom-AutoRacer

./: .gitignore  AGENTLOG.md  CLAUDE.md  PJINFO.md  PROMPT.md  README.md  TODO.md  frames_2026-01-29_13.39.01.gv  source_all.sh
docs/: README.md  STAGE_REVIEW_2026-04-01.md  启动与运行规范.md  开发流程与验证规范.md
docs/archive/: README.md
docs/archive/legacy-agent-notes/: AGENTLOG.md  PJINFO.md  TODO.md
docs/archive/stage-reviews/: STAGE_REVIEW_2026-04-01.md
docs/test-records/: README.md
docs/test-records/maps/: README.md  stage3-final-floor2-loop-20260517-101119.pgm  stage3-final-floor2-loop-20260517-101119.yaml
docs/test-records/rosbags/stage1-hardpass-2026-05-15-0p5mps/: metadata.yaml
docs/test-records/stage-1-ackermann-chassis/: TEMPLATE.md
docs/test-records/stage-2-path-tracking/: TEMPLATE.md
docs/test-records/stage-3-slam-map/: 2026-05-17-manual-mapping-pass.md  TEMPLATE.md
docs/test-records/stage-4-map-navigation/: TEMPLATE.md
src/autoracer_bringup/: CMakeLists.txt  package.xml
src/autoracer_bringup/launch/: stage1_chassis.launch.py  stage2_goal_tracking.launch.py  stage2_path_tracking.launch.py  stage3_mapping.launch.py  stage4_navigation.launch.py
src/autoracer_imu_tf_broadcaster/: README.md  package.xml  setup.cfg  setup.py
src/autoracer_imu_tf_broadcaster/autoracer_imu_tf_broadcaster/: __init__.py  imu_tf_broadcaster.py
src/autoracer_imu_tf_broadcaster/resource/: autoracer_imu_tf_broadcaster
src/autoracer_interfaces/: CMakeLists.txt  package.xml
src/autoracer_interfaces/msg/: AckermannChassisCommand.msg  ChassisState.msg  PathTrackingDiagnostics.msg  Supersonic.msg
src/autoracer_interfaces/srv/: SetRgb.srv
src/autoracer_keyboard/: package.xml  setup.cfg  setup.py
src/autoracer_keyboard/autoracer_keyboard/: keyboard_control.py
src/autoracer_lidar_ros2/lslidar_ros/lslidar_driver/: package.xml
src/autoracer_lidar_ros2/lslidar_ros/lslidar_driver/include/lslidar_driver/: lslidar_driver.h
src/autoracer_lidar_ros2/lslidar_ros/lslidar_driver/params/: lslidar_cx.yaml
src/autoracer_lidar_ros2/lslidar_ros/lslidar_driver/src/: input.cpp  lslidar_driver.cpp  lslidar_driver_node.cpp
src/autoracer_path_tracking/: package.xml  setup.cfg  setup.py
src/autoracer_path_tracking/autoracer_path_tracking/: goal_path_publisher.py  pure_pursuit.py  pure_pursuit_tracker.py  test_path_publisher.py
src/autoracer_robot_nav2/: CMakeLists.txt  README.md  package.xml
src/autoracer_robot_nav2/launch/: navigation.launch.py  save_map.launch.py
src/autoracer_robot_nav2/param/: autoracer_nav2_params.yaml  stage4_nav2_params.yaml
src/autoracer_robot_nav2/scripts/: twist_to_ackermann.py
src/autoracer_robot_slam/LIO-SAM-ROS2/: README.md  TODO.md  launch_readme.txt
src/autoracer_robot_slam/LIO-SAM-ROS2/config/: autoracer_params.yaml  params.yaml
src/autoracer_robot_slam/LIO-SAM-ROS2/launch/: autoracer_run.launch.py
src/autoracer_robot_slam/LIO-SAM-ROS2/launch/include/: turn_on_wheeltec_robot_lio.launch.py
src/autoracer_robot_slam/autoracer_slam_toolbox/: CMakeLists.txt  README.md  package.xml
src/autoracer_robot_slam/autoracer_slam_toolbox/config/: mapper_params_floor2_dense.yaml  mapper_params_online_sync.yaml
src/autoracer_robot_slam/autoracer_slam_toolbox/launch/: slam.launch.py
src/autoracer_robot_slam/slam_gmapping/: CMakeLists.txt  README.md
src/autoracer_robot_slam/slam_gmapping/launch/: slam_gmapping.launch.py
src/autoracer_robot_slam/slam_gmapping/src/: slam_gmapping.cpp
src/autoracer_robot_urdf/: CMakeLists.txt  EXTRINSICS.md  README.md  package.xml
src/autoracer_robot_urdf/launch/: imu_attitude_viz.launch.py  robot_description.launch.py
src/autoracer_robot_urdf/rviz/: autoracer.rviz  imu_attitude.rviz  nav2.rviz  pointcloud.rviz  slam.rviz  urdf.rviz
src/autoracer_robot_urdf/urdf/: autoracer.urdf.xacro
src/hipnuc_imu/: README.md
src/hipnuc_imu/config/: hipnuc_config.yaml
src/hipnuc_imu/launch/: imu_spec_msg.launch.py
src/hipnuc_imu/src/: serial_port.cpp
src/turn_on_autoracer_robot/: CMakeLists.txt  package.xml
src/turn_on_autoracer_robot/config/: ackermann_chassis.yaml  ackermann_ekf.yaml  autoracer_params.yaml  ekf.yaml  imu.yaml
src/turn_on_autoracer_robot/include/turn_on_autoracer_robot/: Quaternion_Solution.hpp  autoracer_robot.hpp
src/turn_on_autoracer_robot/launch/: ackermann_chassis.launch.py  autoracer_ekf.launch.py  autoracer_serial.launch.py  turn_on_autoracer_robot.launch.py
src/turn_on_autoracer_robot/src/: Quaternion_Solution.cpp  ackermann_chassis_bridge.cpp  autoracer_robot.cpp  autoracer_robot_node.cpp
src/zed-ros2-wrapper/: CLAUDE.md
tools/: README.md
tools/acceptance/: README.md  stage1_acceptance_check.py  stage2_path_fixture_check.py  stage2_tracker_fake_odom_check.py  stage3_mapping_contract_check.py  stage4_navigation_contract_check.py
tools/acceptance/fixtures/stage2_paths/: goal_2m_2m.json  goal_3m_2m.json  left_arc_r2m.json  right_arc_r2m.json  s_curve.json  stop_at_end.json  straight_2m.json
