<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoracer_bringup</name>
  <version>0.1.0</version>
  <description>Stage-specific launch entry points for the AutoRacer Ackermann stack</description>
  <maintainer email="autoracer@todo.todo">autoracer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>turn_on_autoracer_robot</exec_depend>
  <exec_depend>autoracer_path_tracking</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
