<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoracer_slam_toolbox</name>
  <version>0.1.0</version>
  <description>SLAM Toolbox 2D建图配置包，适配 AutoRacer 平台</description>
  <maintainer email="autoracer@todo.todo">autoracer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>slam_toolbox</depend>
  <depend>pointcloud_to_laserscan</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
